# src/main/java/com/github/gorgestar/isn/api/UsersApi.java
@@ -6,8 +6,8 @@
 package com.github.gorgestar.isn.api;
 
 import com.github.gorgestar.isn.model.Error;
-import com.github.gorgestar.isn.model.NewPet;
-import com.github.gorgestar.isn.model.Pet;
+import com.github.gorgestar.isn.model.NewUsers;
+import com.github.gorgestar.isn.model.Users;
 import io.swagger.annotations.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -30,22 +30,22 @@ import java.util.Map;
 import java.util.Optional;
 
 @Validated
-@Api(value = "pets", description = "the pets API")
-public interface PetsApi {
+@Api(value = "users", description = "the users API")
+public interface UsersApi {
 
     default Optional<NativeWebRequest> getRequest() {
         return Optional.empty();
     }
 
-    @ApiOperation(value = "", nickname = "addPet", notes = "Creates a new pet in the store.  Duplicates are allowed", response = Pet.class, tags={  })
+    @ApiOperation(value = "", nickname = "addUser", notes = "Creates a new user.  Duplicates are not allowed", response = Users.class, tags={  })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "pet response", response = Pet.class),
+        @ApiResponse(code = 200, message = "user response", response = Users.class),
         @ApiResponse(code = 200, message = "unexpected error", response = Error.class) })
-    @RequestMapping(value = "/pets",
+    @RequestMapping(value = "/users",
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.POST)
-    default ResponseEntity<Pet> addPet(@ApiParam(value = "Pet to add to the store" ,required=true )  @Valid @RequestBody NewPet newPet) {
+    default ResponseEntity<Users> addUser(@ApiParam(value = "User to add to the awesome" ,required=true )  @Valid @RequestBody NewUsers newUsers) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
@@ -59,27 +59,27 @@ public interface PetsApi {
     }
 
 
-    @ApiOperation(value = "", nickname = "deletePet", notes = "deletes a single pet based on the ID supplied", tags={  })
+    @ApiOperation(value = "", nickname = "deleteUser", notes = "deletes a single user based on the ID supplied", tags={  })
     @ApiResponses(value = { 
-        @ApiResponse(code = 204, message = "pet deleted"),
+        @ApiResponse(code = 204, message = "user deleted"),
         @ApiResponse(code = 200, message = "unexpected error", response = Error.class) })
-    @RequestMapping(value = "/pets/{id}",
+    @RequestMapping(value = "/users/{id}",
         produces = { "application/json" }, 
         method = RequestMethod.DELETE)
-    default ResponseEntity<Void> deletePet(@ApiParam(value = "ID of pet to delete",required=true) @PathVariable("id") Long id) {
+    default ResponseEntity<Void> deleteUser(@ApiParam(value = "ID of user to delete",required=true) @PathVariable("id") Long id) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
 
     }
 
 
-    @ApiOperation(value = "", nickname = "findPetById", notes = "Returns a user based on a single ID, if the user does not have access to the pet", response = Pet.class, tags={  })
+    @ApiOperation(value = "", nickname = "findPetById", notes = "Returns a user based on a single ID.", response = Users.class, tags={  })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "pet response", response = Pet.class),
+        @ApiResponse(code = 200, message = "user response", response = Users.class),
         @ApiResponse(code = 200, message = "unexpected error", response = Error.class) })
-    @RequestMapping(value = "/pets/{id}",
+    @RequestMapping(value = "/users/{id}",
         produces = { "application/json" }, 
         method = RequestMethod.GET)
-    default ResponseEntity<Pet> findPetById(@ApiParam(value = "ID of pet to fetch",required=true) @PathVariable("id") Long id) {
+    default ResponseEntity<Users> findPetById(@ApiParam(value = "ID of user to fetch",required=true) @PathVariable("id") Long id) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
@@ -93,14 +93,14 @@ public interface PetsApi {
     }
 
 
-    @ApiOperation(value = "", nickname = "findPets", notes = "Returns all pets from the system that the user has access to Nam sed condimentum est. Maecenas tempor sagittis sapien, nec rhoncus sem sagittis sit amet. Aenean at gravida augue, ac iaculis sem. Curabitur odio lorem, ornare eget elementum nec, cursus id lectus. Duis mi turpis, pulvinar ac eros ac, tincidunt varius justo. In hac habitasse platea dictumst. Integer at adipiscing ante, a sagittis ligula. Aenean pharetra tempor ante molestie imperdiet. Vivamus id aliquam diam. Cras quis velit non tortor eleifend sagittis. Praesent at enim pharetra urna volutpat venenatis eget eget mauris. In eleifend fermentum facilisis. Praesent enim enim, gravida ac sodales sed, placerat id erat. Suspendisse lacus dolor, consectetur non augue vel, vehicula interdum libero. Morbi euismod sagittis libero sed lacinia. Sed tempus felis lobortis leo pulvinar rutrum. Nam mattis velit nisl, eu condimentum ligula luctus nec. Phasellus semper velit eget aliquet faucibus. In a mattis elit. Phasellus vel urna viverra, condimentum lorem id, rhoncus nibh. Ut pellentesque posuere elementum. Sed a varius odio. Morbi rhoncus ligula libero, vel eleifend nunc tristique vitae. Fusce et sem dui. Aenean nec scelerisque tortor. Fusce malesuada accumsan magna vel tempus. Quisque mollis felis eu dolor tristique, sit amet auctor felis gravida. Sed libero lorem, molestie sed nisl in, accumsan tempor nisi. Fusce sollicitudin massa ut lacinia mattis. Sed vel eleifend lorem. Pellentesque vitae felis pretium, pulvinar elit eu, euismod sapien. ", response = Pet.class, responseContainer = "List", tags={  })
+    @ApiOperation(value = "", nickname = "findUsers", notes = "Returns all users from the system. ", response = Users.class, responseContainer = "List", tags={  })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "pet response", response = Pet.class, responseContainer = "List"),
+        @ApiResponse(code = 200, message = "user response", response = Users.class, responseContainer = "List"),
         @ApiResponse(code = 200, message = "unexpected error", response = Error.class) })
-    @RequestMapping(value = "/pets",
+    @RequestMapping(value = "/users",
         produces = { "application/json" }, 
         method = RequestMethod.GET)
-    default ResponseEntity<List<Pet>> findPets(@ApiParam(value = "tags to filter by") @Valid @RequestParam(value = "tags", required = false) List<String> tags,@ApiParam(value = "maximum number of results to return") @Valid @RequestParam(value = "limit", required = false) Integer limit) {
+    default ResponseEntity<List<Users>> findUsers(@ApiParam(value = "tags to filter by") @Valid @RequestParam(value = "tags", required = false) List<String> tags,@ApiParam(value = "maximum number of results to return") @Valid @RequestParam(value = "limit", required = false) Integer limit) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
