# src/main/resources/openapi.yaml
@@ -1,8 +1,8 @@
 openapi: "3.0.0"
 info:
   version: 1.0.0
-  title: Swagger Petstore
-  description: A sample API that uses a petstore as an example to demonstrate features in the swagger-2.0 specification
+  title: Swagger isn
+  description: awesome social network
   termsOfService: http://swagger.io/terms/
   contact:
     name: gorgestar team
@@ -14,13 +14,11 @@ info:
 servers:
   - url: http://localhost:8080/api
 paths:
-  /pets:
+  /users:
     get:
       description: |
-        Returns all pets from the system that the user has access to
-        Nam sed condimentum est. Maecenas tempor sagittis sapien, nec rhoncus sem sagittis sit amet. Aenean at gravida augue, ac iaculis sem. Curabitur odio lorem, ornare eget elementum nec, cursus id lectus. Duis mi turpis, pulvinar ac eros ac, tincidunt varius justo. In hac habitasse platea dictumst. Integer at adipiscing ante, a sagittis ligula. Aenean pharetra tempor ante molestie imperdiet. Vivamus id aliquam diam. Cras quis velit non tortor eleifend sagittis. Praesent at enim pharetra urna volutpat venenatis eget eget mauris. In eleifend fermentum facilisis. Praesent enim enim, gravida ac sodales sed, placerat id erat. Suspendisse lacus dolor, consectetur non augue vel, vehicula interdum libero. Morbi euismod sagittis libero sed lacinia.
-        Sed tempus felis lobortis leo pulvinar rutrum. Nam mattis velit nisl, eu condimentum ligula luctus nec. Phasellus semper velit eget aliquet faucibus. In a mattis elit. Phasellus vel urna viverra, condimentum lorem id, rhoncus nibh. Ut pellentesque posuere elementum. Sed a varius odio. Morbi rhoncus ligula libero, vel eleifend nunc tristique vitae. Fusce et sem dui. Aenean nec scelerisque tortor. Fusce malesuada accumsan magna vel tempus. Quisque mollis felis eu dolor tristique, sit amet auctor felis gravida. Sed libero lorem, molestie sed nisl in, accumsan tempor nisi. Fusce sollicitudin massa ut lacinia mattis. Sed vel eleifend lorem. Pellentesque vitae felis pretium, pulvinar elit eu, euismod sapien.
-      operationId: findPets
+        Returns all users from the system.
+      operationId: findUsers
       parameters:
         - name: tags
           in: query
@@ -40,108 +38,100 @@ paths:
             format: int32
       responses:
         200:
-          description: pet response
+          description: user response
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Pet'
+                  $ref: "#/components/schemas/Users"
         default:
           description: unexpected error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
     post:
-      description: Creates a new pet in the store.  Duplicates are allowed
-      operationId: addPet
+      description: Creates a new user.  Duplicates are not allowed
+      operationId: addUser
       requestBody:
-        description: Pet to add to the store
+        description: User to add to the awesome
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/NewPet'
+              $ref: "#/components/schemas/NewUsers"
       responses:
         200:
-          description: pet response
+          description: user response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: "#/components/schemas/Users"
         default:
           description: unexpected error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-  /pets/{id}:
+                $ref: "#/components/schemas/Error"
+  /users/{id}:
     get:
-      description: Returns a user based on a single ID, if the user does not have access to the pet
+      description: Returns a user based on a single ID.
       operationId: find pet by id
       parameters:
         - name: id
           in: path
-          description: ID of pet to fetch
+          description: ID of user to fetch
           required: true
           schema:
             type: integer
             format: int64
       responses:
         200:
-          description: pet response
+          description: user response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Pet'
+                $ref: "#/components/schemas/Users"
         default:
           description: unexpected error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
     delete:
-      description: deletes a single pet based on the ID supplied
-      operationId: deletePet
+      description: deletes a single user based on the ID supplied
+      operationId: deleteUser
       parameters:
         - name: id
           in: path
-          description: ID of pet to delete
+          description: ID of user to delete
           required: true
           schema:
             type: integer
             format: int64
       responses:
         204:
-          description: pet deleted
+          description: user deleted
         default:
           description: unexpected error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
+
 components:
   schemas:
-    Pet:
-      allOf:
-        - $ref: '#/components/schemas/NewPet'
-        - required:
-          - id
-          properties:
-            id:
-              type: integer
-              format: int64
-
-    NewPet:
+    BaseEntity:
       required:
-        - name  
+        - id
+        - version
       properties:
-        name:
+        id:
           type: string
-        tag:
-          type: string    
-
+        version:
+          type: integer
+          format: int64
     Error:
       required:
         - code
@@ -152,3 +142,25 @@ components:
           format: int32
         message:
           type: string
+
+    Users:
+      allOf:
+        - $ref: "#/components/schemas/NewUsers"
+        - $ref: "#/components/schemas/BaseEntity"
+    NewUsers:
+      required:
+        - name
+      properties:
+        name:
+          type: string
+        tag:
+          type: string
+    NewPost:
+      required:
+        - title
+      properties:
+        title:
+            type: string
+        auther:
+          allOf:
+            - $ref: "#/components/schemas/Users"
